@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sat, Aug 8, 2009
+---------------------------------------------------------------------
+- Added :before_destroy filters for User model.
+
 Wed, Aug 5, 2009
 ---------------------------------------------------------------------
 - Added confirmation when deleting an user (Admin/Users/Delete).
